force-app/main/default/objects/Job__c/fields/KeepAssignmentOverride__c.field-meta.xml
<CustomField>
    <fullName>KeepAssignmentOverride__c</fullName>
    <label>Keep Assignment Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Override</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>