force-app/main/default/objects/Job__c/fields/LastPBScheduledDateChangeDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastPBScheduledDateChangeDateTime__c</fullName>
    <label>Last PB Scheduled Date Change Date Time</label>
    <type>DateTime</type>
</CustomField>