force-app/main/default/objects/Job__c/fields/LocationNumber__c.field-meta.xml
<CustomField>
    <fullName>LocationNumber__c</fullName>
    <description>The field that indicates the location number of the Job.</description>
    <formula>Location__r.LocationNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The location number of the job</inlineHelpText>
    <label>Location #</label>
    <type>Text</type>
</CustomField>