force-app/main/default/objects/Job__c/fields/LocationState__c.field-meta.xml
<CustomField>
    <fullName>LocationState__c</fullName>
    <description>The field that indicates the state where the Job is located.</description>
    <formula>TEXT(Location__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The state where the job is located</inlineHelpText>
    <label>Location State</label>
    <type>Text</type>
</CustomField>