force-app/main/default/objects/Job__c/fields/LocationTimezoneOffset__c.field-meta.xml
<CustomField>
    <fullName>LocationTimezoneOffset__c</fullName>
    <description>UTC time zone offset for location that is used in start and end time UTC conversions.</description>
    <inlineHelpText>The UTC time zone offset for job location that is used to determine the start time and end time in UTC time zone.</inlineHelpText>
    <label>LocationTimezoneOffset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>