force-app/main/default/objects/Job__c/fields/LogInEntityChange__c.field-meta.xml
<CustomField>
    <fullName>LogInEntityChange__c</fullName>
    <formula>AND(IsCancellable__c  ,ProjectStatus__c ==&#39;In Progress&#39;)</formula>
    <label>LogInEntityChange</label>
    <type>Checkbox</type>
</CustomField>