force-app/main/default/objects/Job__c/fields/MaterialCount__c.field-meta.xml
<CustomField>
    <fullName>MaterialCount__c</fullName>
    <label>Material Count</label>
    <summaryFilterItems>
        <field>JobMaterial__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>JobMaterial__c.Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>