force-app/main/default/objects/Job__c/fields/NumberofImages__c.field-meta.xml
<CustomField>
    <fullName>NumberofImages__c</fullName>
    <label>Number of Images</label>
    <summaryForeignKey>JobAttempt__c.Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>