force-app/main/default/objects/Job__c/fields/NumberOfWorkers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfWorkers__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Number of workers required on this job</inlineHelpText>
    <label>Number of Workers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>