force-app/main/default/objects/Job__c/fields/OneHubRetailerId__c.field-meta.xml
<CustomField>
    <fullName>OneHubRetailerId__c</fullName>
    <description>The field that indicates the OneHub Retailer ID number.</description>
    <inlineHelpText>The OneHub retailer ID of the job.</inlineHelpText>
    <label>OneHub Retailer ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>