force-app/main/default/objects/Job__c/fields/OriginalProjectEndDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalProjectEndDate__c</fullName>
    <description>The field that indicates the original end date for a Project.</description>
    <formula>Project__r.BookedProjectEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project End Date (Original)</label>
    <type>Date</type>
</CustomField>