force-app/main/default/objects/Job__c/fields/OriginalProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalProjectStartDate__c</fullName>
    <description>The field that indicates the original start date of the Project.</description>
    <formula>Project__r.BookedProjectStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Start Date (Original)</label>
    <type>Date</type>
</CustomField>