force-app/main/default/objects/Job__c/fields/OutOfProcessReportingReason__c.field-meta.xml
<CustomField>
    <fullName>OutOfProcessReportingReason__c</fullName>
    <label>Out of Process Reporting Reason</label>
    <type>TextArea</type>
</CustomField>