force-app/main/default/objects/Job__c/fields/ProjectCancelLeadTime__c.field-meta.xml
<CustomField>
    <fullName>ProjectCancelLeadTime__c</fullName>
    <description>The field that indicates the lead time for a Project to be canceled</description>
    <formula>Project__r.ProjectCancelLeadTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The lead name for a project to be canceled</inlineHelpText>
    <label>Project Cancel Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>