force-app/main/default/objects/Job__c/fields/ProjectEndDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectEndDate__c</fullName>
    <description>The field that indicates the current end date for a Project.</description>
    <formula>Project__r.EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project End Date (Current)</label>
    <type>Date</type>
</CustomField>