force-app/main/default/objects/Job__c/fields/ProjectLocation__c.field-meta.xml
<CustomField>
    <fullName>ProjectLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field that indicates the Location of a Project.</description>
    <inlineHelpText>The location of the project</inlineHelpText>
    <label>Project Location</label>
    <referenceTo>ProjectLocation__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>