force-app/main/default/objects/Job__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <description>The field that indicates the title of the Project.</description>
    <formula>Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The title of the Project.</inlineHelpText>
    <label>Project Title</label>
    <type>Text</type>
</CustomField>