force-app/main/default/objects/Job__c/fields/ProjectOrigin__c.field-meta.xml
<CustomField>
    <fullName>ProjectOrigin__c</fullName>
    <description>The field that indicates the Project Origin.</description>
    <formula>Project__r.ProjectOrigin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The project origin</inlineHelpText>
    <label>Project Origin</label>
    <type>Text</type>
</CustomField>