force-app/main/default/objects/Job__c/fields/ProjectOriginId__c.field-meta.xml
<CustomField>
    <fullName>ProjectOriginId__c</fullName>
    <description>The field that indicates the ID number of the Project Origin.</description>
    <formula>Project__r.OriginID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The project origin ID number</inlineHelpText>
    <label>Project Origin ID</label>
    <type>Text</type>
</CustomField>