force-app/main/default/objects/Job__c/fields/ProjectScheduleOptionCode__c.field-meta.xml
<CustomField>
    <fullName>ProjectScheduleOptionCode__c</fullName>
    <description>The field that indicates the code of the Project Schedule Option.</description>
    <formula>Project__r.ProjectScheduleOptionCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Schedule Option Code</label>
    <type>Text</type>
</CustomField>