force-app/main/default/objects/Job__c/fields/ProjectScheduleOptionName__c.field-meta.xml
<CustomField>
    <fullName>ProjectScheduleOptionName__c</fullName>
    <description>The field that indicates who is able to update the Schedule date, the EC or the Project Builder.  In the future, there will also be a System Generated option.</description>
    <inlineHelpText>Determines who (the Execution Company or the Project Builder) is able to update the Schedule date.</inlineHelpText>
    <label>Project Schedule Option</label>
    <length>50</length>
    <type>Text</type>
</CustomField>