force-app/main/default/objects/Job__c/fields/ProjectService__c.field-meta.xml
<CustomField>
    <fullName>ProjectService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field that indicates the Project Service.</description>
    <inlineHelpText>The project service number</inlineHelpText>
    <label>Project Service</label>
    <referenceTo>ProjectService__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>