force-app/main/default/objects/Job__c/fields/ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectStartDate__c</fullName>
    <description>The field that indicates the current start date of the Project.</description>
    <formula>Project__r.StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Start Date (Current)</label>
    <type>Date</type>
</CustomField>