force-app/main/default/objects/Job__c/fields/ProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatus__c</fullName>
    <description>The field that indicates the status of the Project.</description>
    <formula>TEXT(Project__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The status of the project</inlineHelpText>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>