force-app/main/default/objects/Job__c/fields/ProjectVersion__c.field-meta.xml
<CustomField>
    <fullName>ProjectVersion__c</fullName>
    <description>The field that indicates the version of the Project.</description>
    <formula>Project__r.UpdateSequence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>