force-app/main/default/objects/Job__c/fields/ProjLocationName__c.field-meta.xml
<CustomField>
    <fullName>ProjLocationName__c</fullName>
    <description>The field that indicates the name of the Project Location.</description>
    <formula>ProjectLocation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the project location</inlineHelpText>
    <label>Project Location Name</label>
    <type>Text</type>
</CustomField>