force-app/main/default/objects/Job__c/fields/ProjServiceName__c.field-meta.xml
<CustomField>
    <fullName>ProjServiceName__c</fullName>
    <description>The field that indicates the name of the Project Service.</description>
    <formula>ProjectService__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the project service</inlineHelpText>
    <label>Project Service Name</label>
    <type>Text</type>
</CustomField>