force-app/main/default/objects/Job__c/fields/ProjSLUniqueKey__c.field-meta.xml
<CustomField>
    <fullName>ProjSLUniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>ProjSLUnique Key</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>