force-app/main/default/objects/Job__c/fields/PurchaseAmount__c.field-meta.xml
<CustomField>
    <fullName>PurchaseAmount__c</fullName>
    <description>The field that indicates the Purchase Amount for the Job.</description>
    <formula>IF(ISBLANK( PurchaseOverRideAmount__c), ProjectService__r.PurchaseAmount__c,PurchaseOverRideAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The purchase amount for the job</inlineHelpText>
    <label>Purchase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>