force-app/main/default/objects/Job__c/fields/PurchaseOverRideAmount__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOverRideAmount__c</fullName>
    <label>Purchase OverRide Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>