force-app/main/default/objects/Job__c/fields/QCFailureReason__c.field-meta.xml
<CustomField>
    <fullName>QCFailureReason__c</fullName>
    <description>The field that indicates the reason for the failure of QC.</description>
    <formula>Text(ActiveJobAttempt__r.QCFailureReasonCode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Why the QC test failed</inlineHelpText>
    <label>QC Failure Reason</label>
    <type>Text</type>
</CustomField>