force-app/main/default/objects/Job__c/fields/ReferralJob__c.field-meta.xml
<CustomField>
    <fullName>ReferralJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The search field for the Referral Job.</description>
    <label>Referral Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>