force-app/main/default/objects/Job__c/fields/ReportedContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactFirstName__c</fullName>
    <description>The field that indicates the first name of the Reported Contact.</description>
    <formula>ActiveJobAttempt__r.ReportedContactFirstName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported Contact First Name</label>
    <type>Text</type>
</CustomField>