force-app/main/default/objects/Job__c/fields/ReportedContactHomeLatitude__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactHomeLatitude__c</fullName>
    <description>The field that indicates the home latitude of the Reported Contact.</description>
    <formula>ActiveJobAttempt__r.ReportedContactHomeLatitude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The home latitude of the reported contact</inlineHelpText>
    <label>Reported Contact Home Latitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>