force-app/main/default/objects/Job__c/fields/ReportedContactHomeLongitude__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactHomeLongitude__c</fullName>
    <description>The field that indicates the home longitude of the Reported Contact.</description>
    <formula>ActiveJobAttempt__r.AssignedContactHomeLongitude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The home longitude of the reported contact</inlineHelpText>
    <label>Reported Contact Home Longitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>