force-app/main/default/objects/Job__c/fields/ReportedContactId__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactId__c</fullName>
    <description>The field that indicates the ID number of the Reported Contact.</description>
    <formula>ActiveJobAttempt__r.ReportedContactId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ID number of the reported contact</inlineHelpText>
    <label>Reported  Contact ID</label>
    <type>Text</type>
</CustomField>