force-app/main/default/objects/Job__c/fields/ReportedContactLastName__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactLastName__c</fullName>
    <description>The field that indicates the last name of the Reported Contact.</description>
    <formula>ActiveJobAttempt__r.ReportedContactLastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reported Contact Last Name</label>
    <type>Text</type>
</CustomField>