force-app/main/default/objects/Job__c/fields/ReportedContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactPhone__c</fullName>
    <description>The field that indicates the phone number of the Reported Contact.</description>
    <formula>ActiveJobAttempt__r.ReportedContactPhone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The phone number of the reported contact</inlineHelpText>
    <label>Reported Contact Phone</label>
    <type>Text</type>
</CustomField>