force-app/main/default/objects/Job__c/fields/ReportedContactTitle__c.field-meta.xml
<CustomField>
    <fullName>ReportedContactTitle__c</fullName>
    <description>The field that indicates the title of the Reported Contact.</description>
    <formula>ActiveJobAttempt__r.ReportedContactTitle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The title of the reported contact</inlineHelpText>
    <label>Reported Contact Title</label>
    <type>Text</type>
</CustomField>