force-app/main/default/objects/Job__c/fields/ReportedEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>ReportedEmployeeId__c</fullName>
    <description>The field that indicates the ID number of the Reported Employee.</description>
    <formula>ActiveJobAttempt__r.ReportedEmployeeId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ID number of the reported employee</inlineHelpText>
    <label>Reported Employee ID</label>
    <type>Text</type>
</CustomField>