force-app/main/default/objects/Job__c/fields/ResponsibleExecutionCompany__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleExecutionCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field that indicates the Execution Company responsible for the Job.</description>
    <inlineHelpText>The name of the execution company responsible for this job</inlineHelpText>
    <label>Responsible Execution Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>