force-app/main/default/objects/Job__c/fields/ResponsibleForExecution__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleForExecution__c</fullName>
    <description>The entity that is responsible for execution. Can be Execution Company, Supplier, or Retailer.</description>
    <inlineHelpText>The entity that is responsible for execution.</inlineHelpText>
    <label>Responsible For Execution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>