force-app/main/default/objects/Job__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <description>The field that indicates the Retailer ID.</description>
    <formula>CASESAFEID(Project__r.Retailer__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Retailer ID from the project</inlineHelpText>
    <label>Retailer</label>
    <type>Text</type>
</CustomField>