force-app/main/default/objects/Job__c/fields/RetailerName__c.field-meta.xml
<CustomField>
    <fullName>RetailerName__c</fullName>
    <description>The field that indicates the name of the Retailer.</description>
    <formula>Project__r.Retailer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Name</label>
    <type>Text</type>
</CustomField>