force-app/main/default/objects/Job__c/fields/RquiresFulfilment__c.field-meta.xml
<CustomField>
    <fullName>RquiresFulfilment__c</fullName>
    <formula>IF(MaterialCount__c&gt;0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Fulfilment</label>
    <type>Checkbox</type>
</CustomField>