force-app/main/default/objects/Job__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field that indicates the Service for the Job.</description>
    <inlineHelpText>The service for the job</inlineHelpText>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>