force-app/main/default/objects/Job__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <description>The field that indicates the name of the Service for the Job.</description>
    <inlineHelpText>The name for the service</inlineHelpText>
    <label>ServiceName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>