force-app/main/default/objects/Job__c/fields/ShiftClosureOverride__c.field-meta.xml
<CustomField>
    <fullName>ShiftClosureOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shift Closure Override</label>
    <type>Checkbox</type>
</CustomField>