force-app/main/default/objects/Job__c/fields/SplitType__c.field-meta.xml
<CustomField>
    <fullName>SplitType__c</fullName>
    <formula>TEXT(Project__r.SplitType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Type</label>
    <type>Text</type>
</CustomField>