force-app/main/default/objects/Job__c/fields/StartDateCalculated__c.field-meta.xml
<CustomField>
    <fullName>StartDateCalculated__c</fullName>
    <formula>IF (UPPER(ProjectScheduleOptionCode__c) == &#39;EC&#39;,ProjectStartDate__c,IF (ISBLANK(JobScheduledDate__c),ProjectStartDate__c,JobScheduledDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date (Job)</label>
    <type>Date</type>
</CustomField>