force-app/main/default/objects/Job__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <formula>JobStartTime__c</formula>
    <label>Start Time</label>
    <type>Text</type>
</CustomField>