force-app/main/default/objects/Job__c/fields/SurveyPhotoViewerEncodedId__c.field-meta.xml
<CustomField>
    <fullName>SurveyPhotoViewerEncodedId__c</fullName>
    <label>Survey Photo Viewer Encoded Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>