force-app/main/default/objects/Job__c/fields/SurveyPhotoViewerUrl__c.field-meta.xml
<CustomField>
    <fullName>SurveyPhotoViewerUrl__c</fullName>
    <formula>$Setup.SurveyPhotoViewerSetting__c.Url__c + &#39;?recid=&#39; +  SurveyPhotoViewerEncodedId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Photo Viewer Url</label>
    <type>Text</type>
</CustomField>