force-app/main/default/objects/Job__c/fields/TimeReported__c.field-meta.xml
<CustomField>
    <fullName>TimeReported__c</fullName>
    <description>The field that displays a summary of total minutes reported.</description>
    <inlineHelpText>Total minutes reported</inlineHelpText>
    <label>Total Time Reported (Minutes)</label>
    <summarizedField>JobAttempt__c.TimeReported__c</summarizedField>
    <summaryForeignKey>JobAttempt__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>