force-app/main/default/objects/Job__c/fields/TotalJobAttempts__c.field-meta.xml
<CustomField>
    <fullName>TotalJobAttempts__c</fullName>
    <description>The field that displays a summary of total job attempts.</description>
    <label>Total Job Attempts</label>
    <summaryForeignKey>JobAttempt__c.Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>