force-app/main/default/objects/Job__c/validationRules/Cancel_Invalid_Project_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Invalid_Project_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND(LOWER(TEXT(PRIORVALUE(JobStatus__c))) == &#39;canceled&#39;, LOWER(TEXT(Project__r.Status__c)) != &#39;booked&#39;, LOWER(TEXT(Project__r.Status__c)) != &#39;launched&#39;, LOWER(TEXT(Project__r.Status__c)) != &#39;in progress&#39;)</errorConditionFormula>
    <errorMessage>Cannot cancel job, invalid Job / Project status. Job cannot be canceled if it is already canceled or the project is not in one these statuses (Booked, Launched, In Progress).</errorMessage>
</ValidationRule>