force-app/main/default/objects/Job__c/validationRules/Canceled_Reason_Other_Requires_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>Canceled_Reason_Other_Requires_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>LOWER(TEXT(JobStatus__c)) == &#39;canceled&#39; &amp;&amp; LOWER(TEXT(JobCanceledReason__c)) == &#39;other&#39; &amp;&amp; TRIM(JobCanceledComments__c) == &#39;&#39;</errorConditionFormula>
    <errorMessage>Please provide cancel comments when cancel reason is Other.</errorMessage>
</ValidationRule>