force-app/main/default/objects/Job__c/validationRules/CannotCancelReportedJob4EndedProject.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotCancelReportedJob4EndedProject</fullName>
    <active>true</active>
    <description>CSM can&#39;t cancel a reported job if the project is ended.</description>
    <errorConditionFormula>AND(
LOWER(TEXT(JobStatus__c)) == &#39;canceled&#39;,
LOWER(TEXT(PRIORVALUE(JobStatus__c))) == &#39;reported&#39;,
LOWER(ProjectStatus__c) == &#39;ended&#39;
)</errorConditionFormula>
    <errorMessage>CSM can&#39;t cancel a reported job if the project is ended.</errorMessage>
</ValidationRule>