force-app/main/default/objects/Job__c/validationRules/CanNotChangeJobIfClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>CanNotChangeJobIfClosed</fullName>
    <active>true</active>
    <description>A Job in a CLOSED status cannot have further actions performed.</description>
    <errorConditionFormula>LOWER(PRIORVALUE(JobStatus__c)) == &#39;closed&#39;</errorConditionFormula>
    <errorMessage>A Job in a CLOSED status cannot have further actions performed.</errorMessage>
</ValidationRule>