force-app/main/default/objects/Job__c/validationRules/Disallow_canceled_job_status_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_canceled_job_status_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(PRIORVALUE(JobStatus__c)) = &#39;Canceled&#39;, TEXT(JobStatus__c) != &#39;Canceled&#39;)</errorConditionFormula>
    <errorMessage>Cannot update the status of a canceled job.</errorMessage>
</ValidationRule>