force-app/main/default/objects/Job__c/validationRules/Disallow_JobSchedDateChange_byPB_ForEC.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_JobSchedDateChange_byPB_ForEC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT CONTAINS($User.Username,&quot;salesforce.integration&quot;), ISCHANGED(JobScheduledDate__c),  LOWER(ProjectScheduleOptionCode__c) = &#39;ec&#39;)</errorConditionFormula>
    <errorMessage>Project Builder cannot change the scheduled date for a &#39;Execution Company&#39; job / project.</errorMessage>
</ValidationRule>