force-app/main/default/objects/Job__c/validationRules/Disallow_multi_days_for_bundled_projects.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_multi_days_for_bundled_projects</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NumberOfDays__c &gt; 1,   Project__r.BundleServices__c )</errorConditionFormula>
    <errorDisplayField>NumberOfDays__c</errorDisplayField>
    <errorMessage>Number of days cannot be more than 1 for bundled projects.</errorMessage>
</ValidationRule>