force-app/main/default/objects/Job__c/validationRules/Disallow_multi_workers_for_AMW_False.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_multi_workers_for_AMW_False</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NumberOfWorkers__c &gt; 1,  ProjectService__r.Service__r.IsNumberOfWorkersRequired__c == false)</errorConditionFormula>
    <errorDisplayField>NumberOfWorkers__c</errorDisplayField>
    <errorMessage>Number Of Workers cannot be more than 1 if the service&#39;s AllowMultipleWorkers is set to false.</errorMessage>
</ValidationRule>