force-app/main/default/objects/Job__c/validationRules/Disallow_multi_workers_for_bundled_proje.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_multi_workers_for_bundled_proje</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NumberOfWorkers__c &gt; 1,   Project__r.BundleServices__c )</errorConditionFormula>
    <errorDisplayField>NumberOfWorkers__c</errorDisplayField>
    <errorMessage>Number of workers cannot be more than 1 for bundled projects.</errorMessage>
</ValidationRule>