force-app/main/default/objects/Job__c/validationRules/Disallow_past_schedule_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_past_schedule_dates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( JobScheduledDate__c),JobScheduledDate__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>Cannot schedule a job to a date that is in the past.</errorMessage>
</ValidationRule>