force-app/main/default/objects/Job__c/validationRules/Disallow_schdate_change_diff_from_PLdate.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_schdate_change_diff_from_PLdate</fullName>
    <active>true</active>
    <description>Do not allow a scheduled date that is different from a project location scheduled date in case of a bundled project</description>
    <errorConditionFormula>AND(Project__r.BundleServices__c,ISCHANGED(JobScheduledDate__c), JobScheduledDate__c !=  ProjectLocation__r.LocationScheduledDate__c)</errorConditionFormula>
    <errorMessage>Job Scheduled date has to match the location scheduled date in case of bundled work.</errorMessage>
</ValidationRule>