force-app/main/default/objects/Job__c/validationRules/Disallow_starttime_for_bundled_projects.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_starttime_for_bundled_projects</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Project__r.BundleServices__c,NOT(ISBLANK(StartTime__c)))</errorConditionFormula>
    <errorDisplayField>JobStartTime__c</errorDisplayField>
    <errorMessage>Start Time cannot be set for Bundled project.</errorMessage>
</ValidationRule>